--- a/Live Stream/lylive.html
+++ b/Live Stream/lylive.html
@@ -20,6 +20,7 @@
 </body>
 <script src="https://unpkg.com/@zegocloud/zego-uikit-prebuilt/zego-uikit-prebuilt.js"></script>
 <script src="ly.js"></script>
+    <a href='https://ko-fi.com/H2H3164V5Z' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi4.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
 <script>
 
 </script>
